添加zh-HK繁体中文翻译

--- a/clientapp/public/locales/zh-HK/challenge_manage.json
+++ b/clientapp/public/locales/zh-HK/challenge_manage.json
@@ -1,41 +1,41 @@
 {
-    "delete": "删除题目",
+    "delete": "刪除題目",
     "alert_title": "注意",
     "save": "保存",
-    "close": "关闭",
-    "delete_description": "你确定要删除这个题目吗？（此操作不可逆！）",
-    "delete_success": "题目删除成功",
-    "offline": "下线题目",
-    "online": "上线题目",
-    "switch_description": "此操作会切换题目状态, 请再次确认！",
+    "close": "關閉",
+    "delete_description": "你確定要刪除這個題目嗎？（此操作不可逆！）",
+    "delete_success": "題目刪除成功",
+    "offline": "下線題目",
+    "online": "上線題目",
+    "switch_description": "此操作會切換題目狀態, 請再次確認！",
     "magic_tool": "妙妙工具箱",
     "update_success": "更新成功",
-    "setting": "题目设置",
-    "setting_description": "在这里可以修改题目的基本信息",
-    "base": "基本设置",
-    "judge_and_hint": "评测设置 & 提示设置",
-    "judge_and_hint_description": "在这里可以覆盖题目的默认评测",
+    "setting": "題目設置",
+    "setting_description": "在這裡可以修改題目的基本信息",
+    "base": "基本設置",
+    "judge_and_hint": "評測設置 & 提示設置",
+    "judge_and_hint_description": "在這裡可以覆蓋題目的默認評測",
     "container": "容器管理",
-    "challenge_tool": "题目工具",
-    "history": "提交历史",
+    "challenge_tool": "題目工具",
+    "history": "提交歷史",
     "dashboard": {
-        "title": "题目管理",
-        "description": "管理和编辑 {{count}} 道题目",
-        "placeholder": "搜索题目名称...",
-        "add": "添加题目",
-        "filter": "分类筛选",
-        "all": "全部分类",
-        "copy": "复制题目名称",
-        "edit": "编辑题目",
+        "title": "題目管理",
+        "description": "管理和編輯 {{count}} 道題目",
+        "placeholder": "搜索題目名稱...",
+        "add": "添加題目",
+        "filter": "分類篩選",
+        "all": "全部分類",
+        "copy": "複製題目名稱",
+        "edit": "編輯題目",
         "delete": {
-            "title": "删除题目",
-            "message": "你确定要删除题目「{{name}}」吗？",
-            "success": "删除题目「{{name}}」成功"
+            "title": "刪除題目",
+            "message": "你確定要刪除題目「{{name}}」嗎？",
+            "success": "刪除題目「{{name}}」成功"
         },
         "empty": {
-            "title": "没有找到题目",
-            "search": "没有找到包含 \"{{content}}\" 的题目",
-            "category": "当前分类下没有题目"
+            "title": "沒有找到題目",
+            "search": "沒有找到包含 \"{{content}}\" 的題目",
+            "category": "當前分類下沒有題目"
         },
         "clear": "清除搜索"
     }
