--- a/clientapp/public/locales/zh-HK/common.json
+++ b/clientapp/public/locales/zh-HK/common.json
@@ -1,57 +1,57 @@
 {
-    "home": "主页",
-    "race": "比赛",
-    "team": "队伍",
-    "about": "关于",
+    "home": "主頁",
+    "race": "比賽",
+    "team": "隊伍",
+    "about": "關於",
     "wp": "文章",
-    "signup": "注册",
-    "login": "登录",
-    "settings": "设置",
-    "change_password_header": "修改密码",
+    "signup": "註冊",
+    "login": "登錄",
+    "settings": "設置",
+    "change_password_header": "修改密碼",
     "login_out": "登出",
-    "version": "当前版本",
+    "version": "當前版本",
     "login_out_success": "登出成功！",
-    "system_color": "使用系统颜色",
-    "enable_background_animation": "开启背景动画",
-    "disable_background_animation": "关闭背景动画",
-    "close": "关闭",
-    "back_to_home": "返回主页",
-    "page_not_found": "页面未找到",
-    "login_first": "请先登录",
-    "loading": "加载中...",
-    "admin": "管理后台",
-    "continue": "继续操作",
-    "answer_incorrect": "答案错误，请重试",
-    "complete_math_question": "完成下面的数学题",
-    "final_confirm": "你确定吗？",
+    "system_color": "使用系統顏色",
+    "enable_background_animation": "開啟背景動畫",
+    "disable_background_animation": "關閉背景動畫",
+    "close": "關閉",
+    "back_to_home": "返回主頁",
+    "page_not_found": "頁面未找到",
+    "login_first": "請先登錄",
+    "loading": "載入中...",
+    "admin": "管理後台",
+    "continue": "繼續操作",
+    "answer_incorrect": "答案錯誤，請重試",
+    "complete_math_question": "完成下面的數學題",
+    "final_confirm": "你確定嗎？",
     "cancel": "取消",
-    "confirm": "确认",
+    "confirm": "確認",
     "error": {
-        "unknow": "发生未知错误",
-        "default": "服务器错误",
-        "request": "网络连接失败，请检查网络",
-        "email": "请先验证邮箱",
-        "400": "请求参数错误",
-        "401": "未授权，请重新登录",
-        "403": "没有权限访问",
-        "404": "请求的资源不存在",
-        "500": "服务器内部错误",
-        "502": "网关错误",
-        "503": "服务暂时不可用",
-        "504": "网关超时"
+        "unknow": "發生未知錯誤",
+        "default": "伺服器錯誤",
+        "request": "網絡連接失敗，請檢查網絡",
+        "email": "請先驗證郵箱",
+        "400": "請求參數錯誤",
+        "401": "未授權，請重新登錄",
+        "403": "沒有權限訪問",
+        "404": "請求的資源不存在",
+        "500": "伺服器內部錯誤",
+        "502": "網關錯誤",
+        "503": "服務暫時不可用",
+        "504": "網關超時"
     },
     "toast": {
         "notice": {
-            "title": "比赛发布了新的公告，请注意查看！",
-            "open": "打开公告"
+            "title": "比賽發佈了新的公告，請注意查看！",
+            "open": "打開公告"
         },
         "hint": {
-            "title": "题目新增了Hint，快去查看吧！",
-            "content": "💡 题目 [{{name}}] 新增了 Hint"
+            "title": "題目新增了Hint，快去查看吧！",
+            "content": "💡 題目 [{{name}}] 新增了 Hint"
         },
         "copy": {
-            "success": "复制成功",
-            "failed": "复制失败"
+            "success": "複製成功",
+            "failed": "複製失敗"
         }
     }
 }
