--- a/clientapp/public/locales/zh-HK/game_manage.json
+++ b/clientapp/public/locales/zh-HK/game_manage.json
@@ -1,42 +1,42 @@
 {
-    "events": "比赛事件",
+    "events": "比賽事件",
     "basic": "基本信息",
-    "settings": "详细设置",
-    "timeline": "阶段设置",
-    "groups": "分组管理",
+    "settings": "詳細設置",
+    "timeline": "階段設置",
+    "groups": "分組管理",
     "notices": "公告管理",
-    "teams": "队伍管理",
+    "teams": "隊伍管理",
     "containers": "容器管理",
-    "update_success": "比赛信息更新成功",
-    "title": "比赛管理",
-    "sub_title": "管理和配置 {{length}} 场比赛",
-    "left_title": "管理模块",
+    "update_success": "比賽信息更新成功",
+    "title": "比賽管理",
+    "sub_title": "管理和配置 {{length}} 場比賽",
+    "left_title": "管理模塊",
     "edited": "有未保存的修改",
-    "save": "保存设置",
-    "goto": "前往比赛",
-    "back": "返回比赛列表",
-    "timeline_title": "时间线与题目分配",
-    "groups_title": "分组管理",
+    "save": "保存設置",
+    "goto": "前往比賽",
+    "back": "返回比賽列表",
+    "timeline_title": "時間線與題目分配",
+    "groups_title": "分組管理",
     "notices_title": "公告管理",
-    "teams_title": "队伍管理",
+    "teams_title": "隊伍管理",
     "containers_title": "容器管理",
-    "search_placeholder": "搜索比赛名称或简介...",
-    "add_game": "创建比赛",
-    "empty_search": "没有找到比赛",
-    "empty_game": "还没有比赛",
-    "search_failed": "没有找到包含 \"{{content}}\" 的比赛",
-    "create_first": "开始创建你的第一场比赛吧！",
+    "search_placeholder": "搜索比賽名稱或簡介...",
+    "add_game": "創建比賽",
+    "empty_search": "沒有找到比賽",
+    "empty_game": "還沒有比賽",
+    "search_failed": "沒有找到包含 \"{{content}}\" 的比賽",
+    "create_first": "開始創建你的第一場比賽吧！",
     "clear_search": "清空搜索",
-    "ready": "即将开始",
-    "running": "进行中",
-    "end": "已结束",
-    "hide": "隐藏",
+    "ready": "即將開始",
+    "running": "進行中",
+    "end": "已結束",
+    "hide": "隱藏",
     "to": "至",
-    "race_mode": "开启后访问网站主页会直接跳转到这个比赛",
-    "enable_race": "开启比赛模式",
-    "edit": "编辑比赛",
-    "adjust": "分数修正",
-    "remove": "删除比赛",
-    "delete_description": "你确定要删除比赛 \"{{name}}\" 吗？此操作无法撤销。所有的提交记录和队伍信息都会被永久删除。",
-    "alert_title": "确认删除"
+    "race_mode": "開啟後訪問網站主頁會直接跳轉到這個比賽",
+    "enable_race": "開啟比賽模式",
+    "edit": "編輯比賽",
+    "adjust": "分數修正",
+    "remove": "刪除比賽",
+    "delete_description": "你確定要刪除比賽 \"{{name}}\" 嗎？此操作無法撤銷。所有的提交記錄和隊伍信息都會被永久刪除。",
+    "alert_title": "確認刪除"
 }
