--- a/clientapp/public/locales/zh-HK/profile_settings.json
+++ b/clientapp/public/locales/zh-HK/profile_settings.json
@@ -1,27 +1,27 @@
 {
-    "form_username_error": "用户名长度必须大于2个字符",
-    "form_phone_error": "需要有效的手机号码",
-    "save_profile_success": "个人信息保存成功",
-    "unknow_error": "未知错误",
-    "change_profile_below": "修改个人信息",
-    "form_username_label": "用户名",
-    "form_username_desc": "在此输入用户名",
-    "form_phone_label": "手机号码",
-    "form_phone_desc": "在此输入手机号码",
-    "form_realname_label": "真实姓名",
-    "form_realname_desc": "在此输入真实姓名",
-    "form_student_number_label": "学号",
-    "form_student_number_desc": "在此输入学号",
-    "form_desc_label": "个人简介",
-    "form_desc_desc": "在此输入个人简介",
+    "form_username_error": "用戶名長度必須大於2個字符",
+    "form_phone_error": "需要有效的手機號碼",
+    "save_profile_success": "個人信息保存成功",
+    "unknow_error": "未知錯誤",
+    "change_profile_below": "修改個人信息",
+    "form_username_label": "用戶名",
+    "form_username_desc": "在此輸入用戶名",
+    "form_phone_label": "手機號碼",
+    "form_phone_desc": "在此輸入手機號碼",
+    "form_realname_label": "真實姓名",
+    "form_realname_desc": "在此輸入真實姓名",
+    "form_student_number_label": "學號",
+    "form_student_number_desc": "在此輸入學號",
+    "form_desc_label": "個人簡介",
+    "form_desc_desc": "在此輸入個人簡介",
     "submit": "提交",
-    "change_email": "修改邮箱",
-    "info": "个人资料",
-    "info_setting": "资料设置",
-    "main_page": "主页",
+    "change_email": "修改郵箱",
+    "info": "個人資料",
+    "info_setting": "資料設置",
+    "main_page": "主頁",
     "basic_info": "基本信息",
-    "change_password": "修改密码",
-    "email_setting": "邮箱设置",
-    "rm_rf": "删号跑路",
-    "developing": "还没有这个功能 :)"
+    "change_password": "修改密碼",
+    "email_setting": "郵箱設置",
+    "rm_rf": "刪號跑路",
+    "developing": "還沒有這個功能 :)"
 }
