--- a/clientapp/public/locales/zh-HK/score_manage.json
+++ b/clientapp/public/locales/zh-HK/score_manage.json
@@ -1,58 +1,58 @@
 {
-    "title": "分数修正管理",
-    "detail": "管理比赛分数调整记录",
-    "error": "加载数据失败",
+    "title": "分數修正管理",
+    "detail": "管理比賽分數調整記錄",
+    "error": "載入數據失敗",
     "cheat": "作弊扣分",
-    "rewart": "奖励加分",
-    "other": "其他调整",
+    "rewart": "獎勵加分",
+    "other": "其他調整",
     "unknow": "未知",
     "create": {
         "title": "添加修正",
-        "success": "分数修正创建成功",
-        "dialog": "添加分数修正",
-        "empty": "添加一条记录"
+        "success": "分數修正創建成功",
+        "dialog": "添加分數修正",
+        "empty": "添加一條記錄"
     },
     "update": {
         "title": "更新修正",
-        "success": "分数修正更新成功",
-        "dialog": "编辑分数修正"
+        "success": "分數修正更新成功",
+        "dialog": "編輯分數修正"
     },
     "delete": {
-        "title": "确认删除分数修正记录",
-        "dialog": "确定要删除这条分数修正记录吗？此操作无法撤销！",
-        "success": "分数修正删除成功"
+        "title": "確認刪除分數修正記錄",
+        "dialog": "確定要刪除這條分數修正記錄嗎？此操作無法撤銷！",
+        "success": "分數修正刪除成功"
     },
-    "back": "返回比赛列表",
-    "search": "搜索队伍名称或原因...",
+    "back": "返回比賽列表",
+    "search": "搜索隊伍名稱或原因...",
     "team": {
-        "label": "队伍名称",
-        "search": "搜索队伍名称...",
+        "label": "隊伍名稱",
+        "search": "搜索隊伍名稱...",
         "searching": "搜索中...",
-        "empty": "未找到匹配的队伍",
-        "selected": "已选择"
+        "empty": "未找到匹配的隊伍",
+        "selected": "已選擇"
     },
-    "type": "修正类型",
+    "type": "修正類型",
     "change": {
-        "label": "分数变化",
-        "placeholder": "输入分数变化量（正数为加分，负数为扣分）"
+        "label": "分數變化",
+        "placeholder": "輸入分數變化量（正數為加分，負數為扣分）"
     },
     "reason": {
         "label": "修正原因",
-        "placeholder": "请输入修正原因"
+        "placeholder": "請輸入修正原因"
     },
     "history": {
-        "title": "分数修正记录",
-        "count": "{{count}} 条记录",
+        "title": "分數修正記錄",
+        "count": "{{count}} 條記錄",
         "empty": {
-            "1": "暂无分数修正记录",
-            "2": "没有找到符合条件的记录",
-            "3": "还没有任何分数修正记录"
+            "1": "暫無分數修正記錄",
+            "2": "沒有找到符合條件的記錄",
+            "3": "還沒有任何分數修正記錄"
         }
     },
     "operation": {
         "label": "操作",
-        "time": "修正时间",
+        "time": "修正時間",
         "operator": "操作者"
     },
-    "id": "记录 ID"
+    "id": "記錄 ID"
 }
