--- a/clientapp/public/locales/zh-HK/team_view.json
+++ b/clientapp/public/locales/zh-HK/team_view.json
@@ -1,54 +1,54 @@
 {
     "cancel": "取消",
     "save": "保存",
-    "sure": "确认",
+    "sure": "確認",
     "back": "返回",
-    "title": "战队信息",
-    "update": "战队口号已更新",
+    "title": "戰隊信息",
+    "update": "戰隊口號已更新",
     "cheat": "作弊扣分",
-    "rewart": "奖励加分",
-    "other": "其他调整",
+    "rewart": "獎勵加分",
+    "other": "其他調整",
     "unknow": "未知",
-    "empty_slogan": "这个战队很神秘，什么都没有留下...",
-    "upload": "上传头像",
-    "edit": "更新口号",
-    "edit_title": "编辑战队口号",
-    "edit_description": "修改你的战队口号，让其他人了解你们的风格",
-    "slogan": "战队口号",
-    "slogan_placeholder": "输入新的战队口号",
-    "points": "分数",
+    "empty_slogan": "這個戰隊很神秘，什麼都沒有留下...",
+    "upload": "上傳頭像",
+    "edit": "更新口號",
+    "edit_title": "編輯戰隊口號",
+    "edit_description": "修改你的戰隊口號，讓其他人了解你們的風格",
+    "slogan": "戰隊口號",
+    "slogan_placeholder": "輸入新的戰隊口號",
+    "points": "分數",
     "rank": "排名",
-    "copy_success": "复制成功",
-    "copy_failed": "复制失败",
-    "belong": "所属分组",
-    "team_hash": "战队Hash",
-    "team_code": "邀请码",
-    "team_member": "战队成员",
-    "empty_team": "所有管理员都在这个战队 :)",
-    "team_captain": "队长",
-    "transfer_captain": "转移队长",
-    "transfer_title": "确认转移队长",
-    "transfer_description": "你确定要将队长权限转移给 {{username}} 吗？此操作不可撤销！",
-    "transfer_captain_success": "队长已转移",
+    "copy_success": "複製成功",
+    "copy_failed": "複製失敗",
+    "belong": "所屬分組",
+    "team_hash": "戰隊Hash",
+    "team_code": "邀請碼",
+    "team_member": "戰隊成員",
+    "empty_team": "所有管理員都在這個戰隊 :)",
+    "team_captain": "隊長",
+    "transfer_captain": "轉移隊長",
+    "transfer_title": "確認轉移隊長",
+    "transfer_description": "你確定要將隊長權限轉移給 {{username}} 嗎？此操作不可撤銷！",
+    "transfer_captain_success": "隊長已轉移",
     "remove_member": "踢出",
-    "remove_title": "确认踢出队员",
-    "remove_description": "你确定要将 {{username}} 踢出战队吗？",
-    "remove_member_success": "队员已移除",
-    "solve": "解题情况",
-    "empty_solve": "暂无题目解出 :(",
-    "challenge": "题目",
-    "solver": "解题者",
-    "solve_time": "解题时间",
-    "adjust": "分数修正",
-    "empty_adjust": "暂无分数修正",
+    "remove_title": "確認踢出隊員",
+    "remove_description": "你確定要將 {{username}} 踢出戰隊嗎？",
+    "remove_member_success": "隊員已移除",
+    "solve": "解題情況",
+    "empty_solve": "暫無題目解出 :(",
+    "challenge": "題目",
+    "solver": "解題者",
+    "solve_time": "解題時間",
+    "adjust": "分數修正",
+    "empty_adjust": "暫無分數修正",
     "adjust_reason": "修正理由",
-    "adjust_time": "修正时间",
-    "danger": "危险操作",
-    "danger_description": "以下操作不可撤销！请谨慎操作！",
-    "delete_team": "解散战队",
-    "delete_title": "确认解散战队",
-    "delete_description": "你确定要解散战队 {{teamname}} 吗？此操作将删除所有战队数据，且不可撤销！",
-    "delete_success": "战队已解散",
-    "not_join_team": "您还没有加入战队",
-    "not_join_team_description": "请先创建或加入一个战队来查看战队信息"
+    "adjust_time": "修正時間",
+    "danger": "危險操作",
+    "danger_description": "以下操作不可撤銷！請謹慎操作！",
+    "delete_team": "解散戰隊",
+    "delete_title": "確認解散戰隊",
+    "delete_description": "你確定要解散戰隊 {{teamname}} 嗎？此操作將刪除所有戰隊數據，且不可撤銷！",
+    "delete_success": "戰隊已解散",
+    "not_join_team": "您還沒有加入戰隊",
+    "not_join_team_description": "請先創建或加入一個戰隊來查看戰隊信息"
 }
