--- a/clientapp/public/locales/zh-HK/verify.json
+++ b/clientapp/public/locales/zh-HK/verify.json
@@ -1,18 +1,18 @@
 {
-    "miss_code": "你的验证码呢？",
-    "email_verified": "邮箱已验证！",
-    "invalid_code": "验证码无效",
-    "email_verifying": "邮箱验证中...",
-    "home": "返回主页",
-    "find_password": "找回密码",
-    "reset_password": "重置密码",
-    "empty_email": "请输入邮箱",
-    "input_email": "请输入需要找回密码的账号邮箱",
-    "send_email": "发送找回密码邮件",
-    "sent_email": "已发送找回密码邮件，请检查邮箱",
-    "new_password": "请输入新密码",
-    "check_password": "确认密码",
-    "not_equal": "两次输入密码不一致",
-    "not_enough": "密码强度不足",
-    "reset_success": "密码已重置，请重新登录"
+    "miss_code": "你的驗證碼呢？",
+    "email_verified": "郵箱已驗證！",
+    "invalid_code": "驗證碼無效",
+    "email_verifying": "郵箱驗證中...",
+    "home": "返回主頁",
+    "find_password": "找回密碼",
+    "reset_password": "重置密碼",
+    "empty_email": "請輸入郵箱",
+    "input_email": "請輸入需要找回密碼的賬號郵箱",
+    "send_email": "發送找回密碼郵件",
+    "sent_email": "已發送找回密碼郵件，請檢查郵箱",
+    "new_password": "請輸入新密碼",
+    "check_password": "確認密碼",
+    "not_equal": "兩次輸入密碼不一致",
+    "not_enough": "密碼強度不足",
+    "reset_success": "密碼已重置，請重新登錄"
 }
