--- a/clientapp/public/locales/zh-HK/admin.json
+++ b/clientapp/public/locales/zh-HK/admin.json
@@ -1,10 +1,10 @@
 {
-    "welcome": "欢迎管理员 {{name}}!",
+    "welcome": "歡迎管理員 {{name}}!",
     "title": "控制台",
-    "games": "比赛管理",
-    "challenges": "题目管理",
-    "users": "用户管理",
-    "logs": "系统日志",
-    "system": "系统设置",
-    "home": "返回主页"
+    "games": "比賽管理",
+    "challenges": "題目管理",
+    "users": "用戶管理",
+    "logs": "系統日誌",
+    "system": "系統設置",
+    "home": "返回主頁"
 }
