--- a/clientapp/public/locales/zh-HK/challenge_view.json
+++ b/clientapp/public/locales/zh-HK/challenge_view.json
@@ -1,53 +1,53 @@
 {
-    "choose_something": "也许你可以选择一下题目",
-    "open_notices": "打开公告",
+    "choose_something": "也許你可以選擇一下題目",
+    "open_notices": "打開公告",
     "rank": "排行",
     "attachments": "附件列表",
-    "download": "点击下载",
-    "external_links": "外部链接",
-    "live_container": "动态靶机",
-    "launch": "启动",
-    "downloaded": "下载完成",
-    "ready_redirect": "准备重定向到:",
-    "check_security": "请注意检查链接是否安全合法",
-    "continue_redirect": "继续跳转",
+    "download": "點擊下載",
+    "external_links": "外部鏈接",
+    "live_container": "動態靶機",
+    "launch": "啟動",
+    "downloaded": "下載完成",
+    "ready_redirect": "準備重定向到:",
+    "check_security": "請注意檢查鏈接是否安全合法",
+    "continue_redirect": "繼續跳轉",
     "cancel_redirect": "取消",
-    "challenge_info": "题目信息",
+    "challenge_info": "題目信息",
     "hints": "提示",
-    "oops_empty": "题目简介是空的?!",
-    "you_have_be_banned": "你已被禁赛，请联系管理员",
-    "back_to_main": "返回主页",
-    "practice_time": "练习模式",
-    "team_submitted": "已报名！",
-    "unknow_error": "未知错误",
-    "choose_team_first": "请先选择团队",
-    "game_ended": "比赛已结束",
-    "game_pending": "比赛尚未开始",
-    "game_start_countdown": "距离比赛开始还有",
-    "not_participated": "尚未报名，请先报名",
-    "team_name": "队伍名称",
-    "no_available_team": "没有可用团队，请先创建团队",
-    "sign_up": "立即报名",
-    "wait_for_process": "已提交报名，请等待审核通过",
-    "login_first": "请先登录",
-    "no_such_game": "比赛不存在",
-    "launching": "启动中...",
-    "destory": "销毁",
-    "copied": "靶机信息已复制",
-    "fail_copy": "复制到剪贴板失败",
-    "container_start_success": "靶机开启成功",
-    "container_extend_success": "靶机到期时间已延长",
-    "container_destory_success": "销毁靶机成功",
-    "containers": "靶机列表",
-    "container_extend": "延长时间",
+    "oops_empty": "題目簡介是空的?!",
+    "you_have_be_banned": "你已被禁賽，請聯繫管理員",
+    "back_to_main": "返回主頁",
+    "practice_time": "練習模式",
+    "team_submitted": "已報名！",
+    "unknow_error": "未知錯誤",
+    "choose_team_first": "請先選擇團隊",
+    "game_ended": "比賽已結束",
+    "game_pending": "比賽尚未開始",
+    "game_start_countdown": "距離比賽開始還有",
+    "not_participated": "尚未報名，請先報名",
+    "team_name": "隊伍名稱",
+    "no_available_team": "沒有可用團隊，請先創建團隊",
+    "sign_up": "立即報名",
+    "wait_for_process": "已提交報名，請等待審核通過",
+    "login_first": "請先登錄",
+    "no_such_game": "比賽不存在",
+    "launching": "啟動中...",
+    "destory": "銷毀",
+    "copied": "靶機信息已複製",
+    "fail_copy": "複製到剪貼板失敗",
+    "container_start_success": "靶機開啟成功",
+    "container_extend_success": "靶機到期時間已延長",
+    "container_destory_success": "銷毀靶機成功",
+    "containers": "靶機列表",
+    "container_extend": "延長時間",
     "submit_flag": "提交!",
-    "solved": "已解决!",
-    "wait_launch": "靶机等待启动或无公网端口",
-    "flag_error": "Flag 错误, 请检查后重新尝试",
-    "judge_error": "Flag 校验错误, 请联系管理员",
+    "solved": "已解決!",
+    "wait_launch": "靶機等待啟動或無公網端口",
+    "flag_error": "Flag 錯誤, 請檢查後重新嘗試",
+    "judge_error": "Flag 校驗錯誤, 請聯繫管理員",
     "submit_flag_title": "提交你的Flag!",
-    "submit_flag_placeholder": "请输入正确的Flag",
-    "submit_flag_close": "关闭",
+    "submit_flag_placeholder": "請輸入正確的Flag",
+    "submit_flag_close": "關閉",
     "submit_flag_check": "提交",
-    "submit_flag_judge": "校验中"
+    "submit_flag_judge": "校驗中"
 }
