--- a/clientapp/public/locales/zh-HK/change_email.json
+++ b/clientapp/public/locales/zh-HK/change_email.json
@@ -1,11 +1,11 @@
 {
-    "please_input_vaild_email": "请输入有效的邮箱地址",
-    "update_email_success": "邮箱地址已更新",
-    "sending_verification": "验证邮箱已发送",
-    "email_address": "邮箱地址",
+    "please_input_vaild_email": "請輸入有效的郵箱地址",
+    "update_email_success": "郵箱地址已更新",
+    "sending_verification": "驗證郵箱已發送",
+    "email_address": "郵箱地址",
     "save": "保存",
-    "resend": "重新发送",
-    "description": "如果你点击了保存, 意味着你想要修改邮箱地址, 你的邮箱验证状态会重新变为未验证",
-    "verifed": "已验证！",
-    "not_verifed": "未验证！"
+    "resend": "重新發送",
+    "description": "如果你點擊了保存, 意味著你想要修改郵箱地址, 你的郵箱驗證狀態會重新變為未驗證",
+    "verifed": "已驗證！",
+    "not_verifed": "未驗證！"
 }
