--- a/clientapp/public/locales/zh-HK/change_password.json
+++ b/clientapp/public/locales/zh-HK/change_password.json
@@ -1,15 +1,15 @@
 {
-    "form_password_length": "密码长度必须大于6位",
-    "form_password_number": "密码必须包含数字",
-    "form_password_lower": "密码必须包含小写字母",
-    "form_password_upper": "密码必须包含大写字母",
-    "form_password_special": "密码必须包含特殊字符",
-    "form_password_confirm": "密码必须与确认密码一致",
-    "change_password_success": "密码修改成功",
-    "unknow_error": "未知错误",
-    "form_title_change_your_password": "修改密码",
-    "form_original_password": "原密码",
-    "form_new_password": "新密码",
-    "form_confirm_password": "确认密码",
+    "form_password_length": "密碼長度必須大於6位",
+    "form_password_number": "密碼必須包含數字",
+    "form_password_lower": "密碼必須包含小寫字母",
+    "form_password_upper": "密碼必須包含大寫字母",
+    "form_password_special": "密碼必須包含特殊字符",
+    "form_password_confirm": "密碼必須與確認密碼一致",
+    "change_password_success": "密碼修改成功",
+    "unknow_error": "未知錯誤",
+    "form_title_change_your_password": "修改密碼",
+    "form_original_password": "原密碼",
+    "form_new_password": "新密碼",
+    "form_confirm_password": "確認密碼",
     "save": "保存"
 }
