--- a/clientapp/public/locales/zh-HK/login_form.json
+++ b/clientapp/public/locales/zh-HK/login_form.json
@@ -1,28 +1,28 @@
 {
-    "username_not_null": "用户名不能为空",
-    "password_not_null": "密码不能为空",
-    "login_successful": "登录成功",
-    "login_failed": "用户名或密码错误",
-    "unknow_error": "未知错误",
-    "form_account": "账号",
-    "form_account_desc": "用户名或电子邮箱",
-    "login_title": "登录你的账号",
-    "login_hint": "输入邮箱登录你的账号",
-    "email": "邮箱",
-    "password": "密码",
-    "forget_password": "忘记密码？",
-    "or_continue_with": "其他登录方式",
-    "login_with_github": "使用Github登录",
-    "dont_have_account": "没有账号？",
-    "sign_up_title": "注册账号",
-    "login": "登录",
-    "cap_err": "获取验证码失败",
-    "cap_init": "点击验证",
-    "cap_solved": "验证通过",
-    "cap_error": "验证失败，请重试！",
-    "cap_error_aria": "验证失败，请重新尝试",
-    "cap_verifying": "验证中...",
-    "cap_verify_aria": "点击进行人机验证",
-    "cap_verifying_aria": "正在验证，请稍候",
-    "cap_verifyed_aria": "验证成功，请继续操作"
+    "username_not_null": "用戶名不能為空",
+    "password_not_null": "密碼不能為空",
+    "login_successful": "登錄成功",
+    "login_failed": "用戶名或密碼錯誤",
+    "unknow_error": "未知錯誤",
+    "form_account": "賬號",
+    "form_account_desc": "用戶名或電子郵箱",
+    "login_title": "登錄你的賬號",
+    "login_hint": "輸入郵箱登錄你的賬號",
+    "email": "郵箱",
+    "password": "密碼",
+    "forget_password": "忘記密碼？",
+    "or_continue_with": "其他登錄方式",
+    "login_with_github": "使用Github登錄",
+    "dont_have_account": "沒有賬號？",
+    "sign_up_title": "註冊賬號",
+    "login": "登錄",
+    "cap_err": "獲取驗證碼失敗",
+    "cap_init": "點擊驗證",
+    "cap_solved": "驗證通過",
+    "cap_error": "驗證失敗，請重試！",
+    "cap_error_aria": "驗證失敗，請重新嘗試",
+    "cap_verifying": "驗證中...",
+    "cap_verify_aria": "點擊進行人機驗證",
+    "cap_verifying_aria": "正在驗證，請稍候",
+    "cap_verifyed_aria": "驗證成功，請繼續操作"
 }
