--- a/clientapp/public/locales/zh-HK/logs.json
+++ b/clientapp/public/locales/zh-HK/logs.json
@@ -1,38 +1,38 @@
 {
     "success": "成功",
-    "failed": "失败",
+    "failed": "失敗",
     "warning": "警告",
-    "admin": "管理员",
-    "user": "用户",
-    "system": "系统",
+    "admin": "管理員",
+    "user": "用戶",
+    "system": "系統",
     "container": "容器",
-    "judge": "判题",
+    "judge": "判題",
     "security": "安全",
-    "category": "类别",
+    "category": "類別",
     "action": "操作",
-    "resource": "资源类型",
-    "status": "状态",
+    "resource": "資源類型",
+    "status": "狀態",
     "ip": "IP地址",
-    "time": "时间",
+    "time": "時間",
     "copy": {
-        "container": "复制容器ID",
-        "user": "复制用户ID",
-        "detail": "复制详细信息",
-        "error": "复制错误信息",
-        "raw": "复制Raw数据"
+        "container": "複製容器ID",
+        "user": "複製用戶ID",
+        "detail": "複製詳細信息",
+        "error": "複製錯誤信息",
+        "raw": "複製Raw數據"
     },
-    "detail": "查看详细信息",
-    "menu": "打开菜单",
-    "total": "总日志数",
-    "24h": "最近24小时",
-    "search": "搜索日志。支持用户名、资源ID、资源类型、操作",
-    "all_category": "全部类别",
-    "all_status": "全部状态",
-    "clear": "清除筛选",
+    "detail": "查看詳細信息",
+    "menu": "打開菜單",
+    "total": "總日誌數",
+    "24h": "最近24小時",
+    "search": "搜索日誌。支持用戶名、資源ID、資源類型、操作",
+    "all_category": "全部類別",
+    "all_status": "全部狀態",
+    "clear": "清除篩選",
     "refresh": "刷新",
-    "row": "列显示",
-    "empty": "暂无数据",
-    "page": "共 {{count}} 条记录，第 {{cur}} / {{total}} 页",
-    "prev": "上一页",
-    "next": "下一页"
+    "row": "列顯示",
+    "empty": "暫無數據",
+    "page": "共 {{count}} 條記錄，第 {{cur}} / {{total}} 頁",
+    "prev": "上一頁",
+    "next": "下一頁"
 }
