--- a/clientapp/public/locales/zh-HK/register_form.json
+++ b/clientapp/public/locales/zh-HK/register_form.json
@@ -1,33 +1,33 @@
 {
-    "form_email_valid": "请输入有效的邮箱地址",
-    "form_username_length": "用户名长度必须大于2个字符",
-    "form_password_length": "密码长度必须大于6位",
-    "form_password_number": "密码必须包含数字",
-    "form_password_lower": "密码必须包含小写字母",
-    "form_password_upper": "密码必须包含大写字母",
-    "form_password_special": "密码必须包含特殊字符",
-    "form_password_confirm": "密码必须与确认密码一致",
-    "unknow_error": "未知错误",
-    "signup_success": "注册成功！",
-    "signup_title": "注册账号",
-    "register_account_below": "填写以下信息注册账号",
-    "form_email_address": "电子邮箱",
-    "form_email_desc": "需要有效邮箱地址，临时邮箱将被拒绝",
-    "form_username": "用户名",
-    "form_username_desc": "至少2个字符",
-    "form_password": "密码",
-    "form_password_desc": "至少6位字符，需包含大小写字母、数字和特殊符号",
-    "form_confirm_password": "确认密码",
-    "signup": "注册",
-    "or_continue_with": "其他注册方式",
-    "login": "登录",
-    "cap_err": "获取验证码失败",
-    "cap_init": "点击验证",
-    "cap_solved": "验证通过",
-    "cap_error": "验证失败，请重试！",
-    "cap_error_aria": "验证失败，请重新尝试",
-    "cap_verifying": "验证中...",
-    "cap_verify_aria": "点击进行人机验证",
-    "cap_verifying_aria": "正在验证，请稍候",
-    "cap_verifyed_aria": "验证成功，请继续操作"
+    "form_email_valid": "請輸入有效的郵箱地址",
+    "form_username_length": "用戶名長度必須大於2個字符",
+    "form_password_length": "密碼長度必須大於6位",
+    "form_password_number": "密碼必須包含數字",
+    "form_password_lower": "密碼必須包含小寫字母",
+    "form_password_upper": "密碼必須包含大寫字母",
+    "form_password_special": "密碼必須包含特殊字符",
+    "form_password_confirm": "密碼必須與確認密碼一致",
+    "unknow_error": "未知錯誤",
+    "signup_success": "註冊成功！",
+    "signup_title": "註冊賬號",
+    "register_account_below": "填寫以下信息註冊賬號",
+    "form_email_address": "電子郵箱",
+    "form_email_desc": "需要有效郵箱地址，臨時郵箱將被拒絕",
+    "form_username": "用戶名",
+    "form_username_desc": "至少2個字符",
+    "form_password": "密碼",
+    "form_password_desc": "至少6位字符，需包含大小寫字母、數字和特殊符號",
+    "form_confirm_password": "確認密碼",
+    "signup": "註冊",
+    "or_continue_with": "其他註冊方式",
+    "login": "登錄",
+    "cap_err": "獲取驗證碼失敗",
+    "cap_init": "點擊驗證",
+    "cap_solved": "驗證通過",
+    "cap_error": "驗證失敗，請重試！",
+    "cap_error_aria": "驗證失敗，請重新嘗試",
+    "cap_verifying": "驗證中...",
+    "cap_verify_aria": "點擊進行人機驗證",
+    "cap_verifying_aria": "正在驗證，請稍候",
+    "cap_verifyed_aria": "驗證成功，請繼續操作"
 }
