--- a/clientapp/public/locales/zh-HK/teams.json
+++ b/clientapp/public/locales/zh-HK/teams.json
@@ -1,50 +1,50 @@
 {
-    "invite_code": "邀请码",
-    "group_invite_code": "分组邀请码",
-    "members": "成员",
-    "show_invite_code": "显示邀请码",
-    "copy_invite_code": "复制邀请码",
-    "refresh_invite_code": "重新生成邀请码",
-    "leader": "队长",
-    "member": "队员",
-    "edit_team": "编辑战队",
-    "team_name": "队伍名称",
-    "team_name_desc": "这是你战队的公开显示名称",
-    "slogan": "战队口号",
-    "slogan_desc": "这是你战队的口号",
-    "disband": "解散战队",
-    "leave_team": "退出战队",
+    "invite_code": "邀請碼",
+    "group_invite_code": "分組邀請碼",
+    "members": "成員",
+    "show_invite_code": "顯示邀請碼",
+    "copy_invite_code": "複製邀請碼",
+    "refresh_invite_code": "重新生成邀請碼",
+    "leader": "隊長",
+    "member": "隊員",
+    "edit_team": "編輯戰隊",
+    "team_name": "隊伍名稱",
+    "team_name_desc": "這是你戰隊的公開顯示名稱",
+    "slogan": "戰隊口號",
+    "slogan_desc": "這是你戰隊的口號",
+    "disband": "解散戰隊",
+    "leave_team": "退出戰隊",
     "save": "保存",
-    "are_you_sure": "你确定吗",
-    "disband_confirm_dialog": "确定要解散这个战队吗？",
-    "leave_confirm_dialog": "确定要退出这个战队吗？",
-    "update_successful": "战队信息更新成功",
-    "kick_user_info_p1": "已成功将用户",
-    "kick_user_info_p2": "移出战队！",
-    "disband_info_p1": "战队",
+    "are_you_sure": "你確定嗎",
+    "disband_confirm_dialog": "確定要解散這個戰隊嗎？",
+    "leave_confirm_dialog": "確定要退出這個戰隊嗎？",
+    "update_successful": "戰隊信息更新成功",
+    "kick_user_info_p1": "已成功將用戶",
+    "kick_user_info_p2": "移出戰隊！",
+    "disband_info_p1": "戰隊",
     "disband_info_p2": "已解散！",
-    "leave_team_info_p1": "退出战队",
+    "leave_team_info_p1": "退出戰隊",
     "leave_team_info_p2": "成功！",
-    "unknow_error": "未知错误",
-    "create_team_success": "战队创建成功！",
-    "create_team": "创建战队",
-    "create_team_desc": "创建战队后，您可以邀请其他人加入",
-    "group_create_team_desc": "当前比赛启用了组绑定机制, 请你联系你的管理员获取邀请码, 以便你加入正确的组.",
+    "unknow_error": "未知錯誤",
+    "create_team_success": "戰隊創建成功！",
+    "create_team": "創建戰隊",
+    "create_team_desc": "創建戰隊後，您可以邀請其他人加入",
+    "group_create_team_desc": "當前比賽啟用了組綁定機制, 請你聯繫你的管理員獲取邀請碼, 以便你加入正確的組.",
     "next_step": "下一步",
-    "form_invite_code_error": "组别邀请码格式错误",
-    "join_team_success": "您已成功加入战队！",
-    "join_team": "加入战队",
-    "join_team_desc": "与好友并肩作战！",
-    "invite_code_desc": "在此输入邀请码",
+    "form_invite_code_error": "組別邀請碼格式錯誤",
+    "join_team_success": "您已成功加入戰隊！",
+    "join_team": "加入戰隊",
+    "join_team_desc": "與好友並肩作戰！",
+    "invite_code_desc": "在此輸入邀請碼",
     "submit": "提交",
-    "form_team_name_error": "队伍名称至少需要2个字符",
-    "continue_button": "继续",
+    "form_team_name_error": "隊伍名稱至少需要2個字符",
+    "continue_button": "繼續",
     "cancel_button": "取消",
-    "invalid_invite_code": "无效的邀请码",
-    "please_login_first": "请先登录！",
-    "update_invite_code_success": "邀请码更新成功",
-    "copied": "已复制",
-    "fail_copy": "复制到剪贴板失败",
-    "create_button": "创建战队",
-    "join_button": "加入战队"
+    "invalid_invite_code": "無效的邀請碼",
+    "please_login_first": "請先登錄！",
+    "update_invite_code_success": "邀請碼更新成功",
+    "copied": "已複製",
+    "fail_copy": "複製到剪貼板失敗",
+    "create_button": "創建戰隊",
+    "join_button": "加入戰隊"
 }
