--- a/clientapp/public/locales/zh-HK/upload_image.json
+++ b/clientapp/public/locales/zh-HK/upload_image.json
@@ -1,5 +1,5 @@
 {
-    "set_avatar_success": "头像设置成功",
-    "unknow_error": "未知错误",
-    "choose_image": "选择图片"
+    "set_avatar_success": "頭像設置成功",
+    "unknow_error": "未知錯誤",
+    "choose_image": "選擇圖片"
 }
