--- a/clientapp/public/locales/zh-HK/user_manage.json
+++ b/clientapp/public/locales/zh-HK/user_manage.json
@@ -1,58 +1,58 @@
 {
-    "username": "用户名",
+    "username": "用戶名",
     "role": {
-        "title": "用户角色",
-        "admin": "管理员",
-        "monitor": "监控员",
-        "user": "用户",
+        "title": "用戶角色",
+        "admin": "管理員",
+        "monitor": "監控員",
+        "user": "用戶",
         "unknow": "未知"
     },
-    "email": "邮箱",
-    "register_ip": "注册时的IP",
-    "last_ip": "上一次登录的IP",
-    "realname": "真实姓名",
-    "student_id": "学号",
-    "phone": "手机号",
-    "slogan": "个性签名",
+    "email": "郵箱",
+    "register_ip": "註冊時的IP",
+    "last_ip": "上一次登錄的IP",
+    "realname": "真實姓名",
+    "student_id": "學號",
+    "phone": "手機號",
+    "slogan": "個性簽名",
     "actions": {
         "title": "操作",
-        "edit": "编辑",
-        "open": "打开菜单",
-        "copy": "复制用户ID",
-        "reset": "重置密码",
-        "delete": "删除用户",
-        "choose": "{{count}} 行已选择"
+        "edit": "編輯",
+        "open": "打開菜單",
+        "copy": "複製用戶ID",
+        "reset": "重置密碼",
+        "delete": "刪除用戶",
+        "choose": "{{count}} 行已選擇"
     },
     "search": {
-        "title": "请输入关键字进行用户搜索",
-        "description": "支持搜索 用户名、邮箱地址、个人资料信息、账号Slogan、用户ID、上一次登陆IP",
-        "row": "列显示",
-        "empty": "暂无数据"
+        "title": "請輸入關鍵字進行用戶搜索",
+        "description": "支持搜索 用戶名、郵箱地址、個人資料信息、賬號Slogan、用戶ID、上一次登陸IP",
+        "row": "列顯示",
+        "empty": "暫無數據"
     },
     "delete": {
-        "title": "确认删除",
-        "description": "确认要删除这个用户吗？此操作不可逆！",
-        "pending": "删除中...",
-        "success": "用户已删除",
-        "failed": "删除用户失败"
+        "title": "確認刪除",
+        "description": "確認要刪除這個用戶嗎？此操作不可逆！",
+        "pending": "刪除中...",
+        "success": "用戶已刪除",
+        "failed": "刪除用戶失敗"
     },
     "reset": {
-        "title": "确认重置密码",
-        "description": "确认要重置这个用户的密码吗？",
+        "title": "確認重置密碼",
+        "description": "確認要重置這個用戶的密碼嗎？",
         "pending": "重置中...",
-        "success": "新密码: {{pwd}}，已复制到剪切板",
-        "error": "重置密码失败"
+        "success": "新密碼: {{pwd}}，已複製到剪切板",
+        "error": "重置密碼失敗"
     },
     "edit": {
-        "name_error": "用户名至少需要2个字符",
-        "email_error": "请输入有效的邮箱地址",
-        "success": "用户信息更新成功",
-        "title": "编辑用户",
-        "default_name": "张三",
-        "username": "用户的登录名",
-        "slogan": "我爱CTF!",
-        "role": "请选择用户角色",
-        "role_description": "用户角色决定了用户的权限"
+        "name_error": "用戶名至少需要2個字符",
+        "email_error": "請輸入有效的郵箱地址",
+        "success": "用戶信息更新成功",
+        "title": "編輯用戶",
+        "default_name": "張三",
+        "username": "用戶的登錄名",
+        "slogan": "我愛CTF!",
+        "role": "請選擇用戶角色",
+        "role_description": "用戶角色決定了用戶的權限"
     },
     "save": "保存"
 }
