品牌重塑：将 A1CTF 升级为 HnuCTF (修改默认配置、文案和构建脚本)

--- a/clientapp/public/locales/zh-HK/challenge_edit.json
+++ b/clientapp/public/locales/zh-HK/challenge_edit.json
@@ -31,7 +31,7 @@
         "port": {
             "label": "端口暴露",
             "add": "添加端口",
-            "description": "端口名稱是你需要映射出來的端口的名稱, 這會顯示給選手, 端口號是容器內服務的端口, A1CTF會自動映射隨機端口到宿主機上, 注意！一道題的不同容器不能同時暴露相同的端口! 比如: 容器1和容器2同時要求暴露80端口, 這會導致映射出問題! 請你在製作docker的時候選擇不同的監聽端口",
+            "description": "端口名稱是你需要映射出來的端口的名稱, 這會顯示給選手, 端口號是容器內服務的端口, HnuCTF會自動映射隨機端口到宿主機上, 注意！一道題的不同容器不能同時暴露相同的端口! 比如: 容器1和容器2同時要求暴露80端口, 這會導致映射出問題! 請你在製作docker的時候選擇不同的監聽端口",
             "name": "端口名稱",
             "num": "端口號",
             "delete": "刪除端口"
