--- a/clientapp/public/locales/zh/challenge_edit.json
+++ b/clientapp/public/locales/zh/challenge_edit.json
@@ -31,7 +31,7 @@
         "port": {
             "label": "端口暴露",
             "add": "添加端口",
-            "description": "端口名称是你需要映射出来的端口的名称, 这会显示给选手, 端口号是容器内服务的端口, A1CTF会自动映射随机端口到宿主机上, 注意！一道题的不同容器不能同时暴露相同的端口! 比如: 容器1和容器2同时要求暴露80端口, 这会导致映射出问题! 请你在制作docker的时候选择不同的监听端口",
+            "description": "端口名称是你需要映射出来的端口的名称, 这会显示给选手, 端口号是容器内服务的端口, HnuCTF会自动映射随机端口到宿主机上, 注意！一道题的不同容器不能同时暴露相同的端口! 比如: 容器1和容器2同时要求暴露80端口, 这会导致映射出问题! 请你在制作docker的时候选择不同的监听端口",
             "name": "端口名称",
             "num": "端口号",
             "delete": "删除端口"
